--- a/Software/SMT_Oven_RTOS/Sources/RTX_Conf_CM.cfg
+++ b/Software/SMT_Oven_RTOS/Sources/RTX_Conf_CM.cfg
@@ -162,14 +162,16 @@
 #endif
 
 //   <o>Timer Thread Priority
-//                        <1=> Low
-//     <2=> Below Normal  <3=> Normal  <4=> Above Normal
-//                        <5=> High
-//                        <6=> Realtime (highest)
+//     <1=> Low
+//     <2=> Below Normal  
+//     <3=> Normal  
+//     <4=> Above Normal
+//     <5=> High
+//     <6=> Realtime (highest)
 //   <i> Defines priority for Timer Thread
 //   <i> Default: High
 #ifndef OS_TIMERPRIO
- #define OS_TIMERPRIO   6
+ #define OS_TIMERPRIO   5
 #endif
 
 //   <o>Timer Thread stack size [bytes] <64-4096:8><#/4>
