--- a/Software/.gitignore
+++ b/Software/.gitignore
@@ -1,35 +1,3 @@
 /.metadata/
-/RemoteSystemsTempFiles/
-/Profile/
-/Copy of SMT_Oven/
-/USB_CPP/
-/USB_CPP_MK20/
-/USBDM_Kinetis/
-/SMT_OvenUsingObjects/
-/SMT_Oven_RTOS_ref/
-/SMT_Oven_Ref/
-/CMSIS_CPP_Tests/
-/SMT_Oven/
-/FRDM_K22F/
-/K22F_Delme/
-/mk22f_Test/
-/.recommenders/
 /MK22F_USB/
-/mk20/
-/mk20x/
-/frdm_k20/
-/frdm_kl25z/
-/xxx/
-/SMT_Oven_RTOS.old/
-/mk20d5/
-/MKL05-cpp-class-cmsis/
-/SMT_Oven_RTOS.save/
-/delme/
-/SMT_Oven_RTOS2/
-/SMT_Oven_RTOS3/
-/MK22DX256M5/
-/SMT_Oven_RTOS4/
-/MK22F_USB - Copy/
-/MK22F_USB_V5/
-/SMT_Oven_RTOS6/
-/SMT_Oven_RTOS7/
+/SMT_Oven_RTOS - Copy/
